<resources>
    <string name="app_name">Calculator</string>
    <string name="myname">Muhammad Ridwan Fathin</string>
    <string name="codename">Shade</string>
    <string name="year">2017</string>

    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="multiply">*</string>
    <string name="sqrt">√</string>
    <string name="square">x²</string>
    <string name="posneg">±</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>

</resources>